tests/ui/coherence/warn-when-cycle-is-error-in-coherence.stderr
error[E0119]: conflicting implementations of trait `PartialEq<Interval<_>>` for type `Interval<_>`
  --> $DIR/warn-when-cycle-is-error-in-coherence.rs:7:10
   |
LL | #[derive(PartialEq, Default)]
   |          ^^^^^^^^^ conflicting implementation for `Interval<_>`
...
LL | impl<T, Q> PartialEq<Q> for Interval<T>
   | --------------------------------------- first implementation here
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
